--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -13,7 +13,72 @@
     height: 3px;
     margin: 0 0 5px 0;
     background: $secondary-color;
+
+    -webkit-animation: glowing 1500ms infinite;
+    -moz-animation: glowing 1500ms infinite;
+    -o-animation: glowing 1500ms infinite;
+    animation: glowing 1500ms infinite;
+
     @include easeOut;
+  }
+  @-webkit-keyframes glowing {
+    0% {
+      background-color: #b20000;
+      -webkit-box-shadow: 0 0 3px #b20000;
+    }
+    50% {
+      background-color: #ff0000;
+      -webkit-box-shadow: 0 0 40px #ff0000;
+    }
+    100% {
+      background-color: #b20000;
+      -webkit-box-shadow: 0 0 3px #b20000;
+    }
+  }
+
+  @-moz-keyframes glowing {
+    0% {
+      background-color: #b20000;
+      -moz-box-shadow: 0 0 3px #b20000;
+    }
+    50% {
+      background-color: #ff0000;
+      -moz-box-shadow: 0 0 40px #ff0000;
+    }
+    100% {
+      background-color: #b20000;
+      -moz-box-shadow: 0 0 3px #b20000;
+    }
+  }
+
+  @-o-keyframes glowing {
+    0% {
+      background-color: #b20000;
+      box-shadow: 0 0 3px #b20000;
+    }
+    50% {
+      background-color: #ff0000;
+      box-shadow: 0 0 40px #ff0000;
+    }
+    100% {
+      background-color: #b20000;
+      box-shadow: 0 0 3px #b20000;
+    }
+  }
+
+  @keyframes glowing {
+    0% {
+      background-color: #b20000;
+      box-shadow: 0 0 3px #b20000;
+    }
+    50% {
+      background-color: #ff0000;
+      box-shadow: 0 0 40px #ff0000;
+    }
+    100% {
+      background-color: #b20000;
+      box-shadow: 0 0 3px #b20000;
+    }
   }
 
   // Rotate Into X With Menu Lines
