--- a/scss/main.scss
+++ b/scss/main.scss
@@ -174,12 +174,14 @@ main {
   @extend .btn;
   background: darken($primary-color, 50);
   color: #fff;
+  text-align: center;
 }
 
 .btn-light {
   @extend .btn;
   background: lighten($primary-color, 50);
   color: #333;
+  text-align: center;
 }
 
 #main-footer {
