Updated profile- 10th March 2022

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -49,6 +49,14 @@ header {
   color: $secondary-color;
 }
 
+.right{
+  float:right;
+}
+
+.left{
+  float:left;
+}
+
 main {
   padding: 4rem;
   // height: 100%;
