--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -57,7 +57,7 @@
 
   .about-info {
     grid-template-areas:
-      "bioimage"
+      "bio-image"
       "bio"
       "job1"
       "job2"
@@ -75,6 +75,7 @@
 @include mediaSm {
   main {
     padding: 2rem;
+
     #home h1 {
       margin-top: 10vh;
     }
