--- a/scss/main.scss
+++ b/scss/main.scss
@@ -49,15 +49,15 @@ header {
   color: $secondary-color;
 }
 
-.right{
-  float:right;
+.right {
+  float: right;
 }
 
-.left{
-  float:left;
+.left {
+  float: left;
 }
 
-.underline{
+.underline {
   text-decoration: underline
 }
 
@@ -81,6 +81,7 @@ main {
 
   &#home {
     overflow: hidden;
+
     h1 {
       margin-top: 20vh;
     }
@@ -91,12 +92,12 @@ main {
   display: grid;
   grid-gap: 30px;
   grid-template-areas:
-    "bioimage bio bio"
+    "bio-image bio bio"
     "job1 job2 job3";
   grid-template-columns: repeat(3, 1fr);
 
   .bio-image {
-    grid-area: bioimage;
+    grid-area: bio-image;
     margin: auto;
     border-radius: 50%;
     border: $secondary-color 3px solid;
@@ -163,6 +164,7 @@ main {
       padding: 0.5rem 1.5rem;
       background: $secondary-color;
       color: set-text-color($secondary-color);
+
       span {
         color: set-text-color($secondary-color);
       }
@@ -176,6 +178,7 @@ main {
   padding: 0.5rem 1rem;
   border: 0;
   margin-bottom: 0.3rem;
+
   &:hover {
     background: $secondary-color;
     color: set-text-color($secondary-color);
